# A-Maze-ing

./: .gitignore  LICENSE.md  Makefile  README.md  a_maze_ing.py  config.txt  maze_analyzer.py  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  setup.cfg
mazegen/: README.md  __init__.py  bonus_mazegen_animation.py  display.py  generator.py  output.py  pattern42.py  solver.py
