[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
requires-python = ">=3.10"
description = "Maze generator and solver."
readme = "mazegen/README.md"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "lupalomi"},
    {name = "scamlett"},
]

[tool.setuptools.packages.find]
include = ["mazegen*"]
